Elaboración de seccion de inicio

--- a/Pagina principal.html
+++ b/Pagina principal.html
@@ -19,4 +19,9 @@
                 <li><a href="#comentarios">Comentarios</a></li>
                 <li><a href="./Registro.php">Iniciar Sesión</a></li>
             </ul>
-        </nav>        
+        </nav>  
+        <main class="snap-container">
+            <section id="inicio">
+                <h1>Bienvenido/a</h1>
+                <p>Red de apoyo juvenil, explora nuestros servicios y aprende con nosotros.</p>
+            </section>      
