Elaboración de seccion sobre nosotros

--- a/Pagina principal.html
+++ b/Pagina principal.html
@@ -24,4 +24,9 @@
             <section id="inicio">
                 <h1>Bienvenido/a</h1>
                 <p>Red de apoyo juvenil, explora nuestros servicios y aprende con nosotros.</p>
+            </section>
+            
+            <section id="sobre">
+                <h1>Sobre nosotros</h1>
+                <p>Este proyecto nace con la iniciativa de promover un desarrollo integral en jóvenes, y otorgar herramientas para mejorar el desempeño laboral</p>
             </section>      
