Elaboración de seccion de servicios

--- a/Pagina principal.html
+++ b/Pagina principal.html
@@ -25,8 +25,39 @@
                 <h1>Bienvenido/a</h1>
                 <p>Red de apoyo juvenil, explora nuestros servicios y aprende con nosotros.</p>
             </section>
-            
+
             <section id="sobre">
                 <h1>Sobre nosotros</h1>
                 <p>Este proyecto nace con la iniciativa de promover un desarrollo integral en jóvenes, y otorgar herramientas para mejorar el desempeño laboral</p>
             </section>      
+
+            <section id="servicios">
+                <h1>¿Qué ofrecemos?</h1>
+                <p>Descubre nuestros servicios diseñados para tu bienestar y crecimiento personal.</p>
+                <div class="services-container">
+
+                    <div class="service">
+                        <img src="./images/psiquico.svg" alt="Psíquico">
+                        <h2>Psíquico</h2>
+                        <p>Exploración y guía para tu mente y emociones.</p>
+                    </div>
+
+                    <div class="service">
+                        <img src="./images/espiritual.svg" alt="Espiritual">
+                        <h2>Espiritual</h2>
+                        <p>Conexión con tu ser interior y equilibrio espiritual.</p>
+                    </div>
+
+                    <div class="service">
+                        <img src="./images/fisico.svg" alt="Físico">
+                        <h2>Físico</h2>
+                        <p>Cuidado y fortalecimiento de tu cuerpo.</p>
+                    </div>
+
+                    <div class="service">
+                        <img src="./images/tecnico.svg" alt="Técnico">
+                        <h2>Técnico</h2>
+                        <p>Soporte y mantenimiento para tus equipos tecnológicos.</p>
+                    </div>
+                </div>
+            </section>
