Elaboración de seccion final de comentarios

--- a/Pagina principal.html
+++ b/Pagina principal.html
@@ -61,3 +61,19 @@
                     </div>
                 </div>
             </section>
+
+            <section id="comentarios">
+                <h1>Comentarios</h1>
+                <p>¡Nos encantaría conocer tu opinión sobre nuestros cursos y servicios!</p>
+                <form action="./php/registro_comentario_be.php" method="post">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+                    <label for="comentario">Comentario:</label>
+                    <textarea id="comentario" name="comentario" rows="4" required></textarea>
+                    <button type="submit">Enviar</button>
+                </form>
+            </section>
+        </main>
+
+</body>
+</html>
